--- a/simpleMapGeoJSON.html
+++ b/simpleMapGeoJSON.html
@@ -46,4 +46,4 @@ L.geoJSON(geojsonFeature).addTo(mymap).bindPopup("<b>"+geojsonFeature.properties
 "+geojsonFeature.properties.popupContent+"<b>");
 </script>
 </body>
-</html
+</html>
