--- a/simpleMapGeoJSON.html
+++ b/simpleMapGeoJSON.html
@@ -29,19 +29,19 @@ attribution: 'Map data &copy; <ahref="http://openstreetmap.org">OpenStreetMap</a
 'Imagery © <a href="http://mapbox.com">Mapbox</a>',
 id: 'mapbox.streets'
 }).addTo(mymap);
-//create a geoJSON feature
+// create a geoJSON feature -
 var geojsonFeature = {
-"type":"Feature",
-"properties":{
-"name":"London",
-"popupContent":"This is where UCL is based"
-},
-"geometry":{
-"type":"Point",
-"coordinate":[-0.118092, 51.509865]
-}
+ "type": "Feature",
+ "properties": {
+ "name": "London",
+ "popupContent": "This is where UCL is based"
+ },
+ "geometry": {
+ "type": "Point",
+ "coordinates": [-0.118092, 51.509865]
+ }
 };
-//add it to the map
+// and add it to the map
 L.geoJSON(geojsonFeature).addTo(mymap).bindPopup("<b>"+geojsonFeature.properties.name+"
 "+geojsonFeature.properties.popupContent+"<b>");
 </script>
