--- a/simpleMapGeoJSON.html
+++ b/simpleMapGeoJSON.html
@@ -6,8 +6,7 @@
 <script src="leaflet.awesome-markers.js"></script>
 <!-- the following links add the CSS and Javascript required for the Leaflet Map -->
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css"
- integrity="sha512-
-wcw6ts8Anuw10Mzh9Ytw4pylW8+NAD4ch3lqm9lzAsTxg0GFeJgoAtxuCLREZSC5lUXdVyo/7yfsqFjQ4S+aKw=="
+ integrity="sha512-wcw6ts8Anuw10Mzh9Ytw4pylW8+NAD4ch3lqm9lzAsTxg0GFeJgoAtxuCLREZSC5lUXdVyo/7yfsqFjQ4S+aKw=="
  crossorigin=""/>
 <script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js"
  integrity="sha512-mNqn2Wg7tSToJhvHcqfzLMU6J4mkOImSPTxVZAdo+lcPlk+GhZmYgACEe0x35K7YzW1zJ7XyJV/TT1MrdXvMcA=="
@@ -49,6 +48,8 @@ var testMarkerPink = L.AwesomeMarkers.icon({
  icon: 'play',
  markerColor: 'pink'
  });
+ // and add it to the map
+L.geoJSON(geojsonFeature).addTo(mymap).bindPopup("<b>"+geojsonFeature.properties.name+" "+geojsonFeature.properties.popupContent+"<b>");
 // and add it to the map
 L.geoJSON(geojsonFeature, {
  pointToLayer: function (feature, latlng) {
