--- a/CustomMarker.html
+++ b/CustomMarker.html
@@ -43,8 +43,11 @@ var geojsonFeature = {
  "type": "Point",
  "coordinates": [-0.118092, 51.509865]
  }
-}; // and add it to the map
-L.geoJSON(geojsonFeature).addTo(mymap).bindPopup("<b>"+geojsonFeature.properties.name+" "+geojsonFeature.properties.popupContent+"<b>");
+};
+var testMarkerPink = L.AwesomeMarkers.icon({
+icon: 'play',
+markerColor: 'pink'
+}); 
 // and add it to the map
 L.geoJSON(geojsonFeature, {
  pointToLayer: function (feature, latlng) {
