--- a/CustomMarker.html
+++ b/CustomMarker.html
@@ -1,8 +1,10 @@
 <html>
 <head>
 <!-- the following links incorporate the CSS required for custom icon creation -->
-<link rel="stylesheet" href="ionicons.min.css">
-<link rel="stylesheet" href="leaflet.awesome-markers.css">
+<link rel="stylesheet" 
+href="ionicons.min.css">
+<link rel="stylesheet" 
+href="leaflet.awesome-markers.css">
 <script src="leaflet.awesome-markers.js"></script>
 <!-- the following links add the CSS and Javascript required for the Leaflet Map -->
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css"
