--- a/CustomMarker.html
+++ b/CustomMarker.html
@@ -50,9 +50,9 @@
 			 "coordinates": [-0.118092, 51.509865]
 			}
 		};
-		 var testMarkerPink = L.AwesomeMarkers.icon({ 
+		 var testMarkerOrange = L.AwesomeMarkers.icon({ 
          icon: 'play', 
-         markerColor: 'pink' 
+         markerColor: 'orange' 
      }); 
 	 		// and add it to the map
 		L.geoJSON(geojsonFeature, {pointToLayer: function (feature, latlng) {
