--- a/leafletGeoJSON2.html
+++ b/leafletGeoJSON2.html
@@ -8,6 +8,10 @@
 	<script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js"
 	integrity="sha512-mNqn2Wg7tSToJhvHcqfzLMU6J4mkOImSPTxVZAdo+lcPlk+GhZmYgACEe0x35K7YzW1zJ7XyJV/TT1MrdXvMcA=="
 	crossorigin=""></script>
+		<!-- the following links incorporate the CSS required for custom icon creation -->
+	<link rel="stylesheet" href="ionicons.min.css">
+	<link rel="stylesheet" href="leaflet.awesome-markers.css">
+	<script src="leaflet.awesome-markers.js"></script>	
 	
 	<!-- the following CSS is used to set the size of the Map -->
 	<style type="text/css">
@@ -66,6 +70,39 @@
 		document.addEventListener('DOMContentLoaded', function() {
 		getEarthquakes();
 		}, false);
+		var testMarkerRed = L.AwesomeMarkers.icon({
+		icon: 'play',
+		markerColor: 'red'
+		});
+		var testMarkerPink = L.AwesomeMarkers.icon({
+		icon: 'play',
+		markerColor: 'pink'
+		});
+		function loadEarthquakelayer(earthquakedata) {
+		// convert the text received from the server to JSON
+		var earthquakejson = JSON.parse(earthquakedata );
+		// load the geoJSON layer
+		var earthquakelayer = L.geoJson(earthquakejson,
+		{
+		// use point to layer to create the points
+		pointToLayer: function (feature, latlng)
+		{
+		// look at the GeoJSON file - specifically at the properties - to see the earthquake magnitude
+		and use a different marker depending on this value
+		// also include a pop-up that shows the place value of the earthquakes
+		if (feature.properties.mag > 1.75) {
+		return L.marker(latlng, {icon:testMarkerRed}).bindPopup("<b>"+feature.properties.place
+		+"</b>");
+		}
+		else {
+		// magnitude is 1.75 or less
+		return L.marker(latlng, {icon:testMarkerPink}).bindPopup("<b>"+feature.properties.place
+		+"</b>");;
+		}
+		},
+		}).addTo(mymap);
+		mymap.fitBounds(earthquakelayer.getBounds());
+		}
 		</script>
 
 	</body>
