--- a/leafletGeoJSON2.html
+++ b/leafletGeoJSON2.html
@@ -87,8 +87,7 @@
 		// use point to layer to create the points
 		pointToLayer: function (feature, latlng)
 		{
-		// look at the GeoJSON file - specifically at the properties - to see the earthquake magnitude
-		and use a different marker depending on this value
+		// look at the GeoJSON file - specifically at the properties - to see the earthquake magnitude and use a different marker depending on this value
 		// also include a pop-up that shows the place value of the earthquakes
 		if (feature.properties.mag > 1.75) {
 		return L.marker(latlng, {icon:testMarkerRed}).bindPopup("<b>"+feature.properties.place
