--- a/multipleLayers.html
+++ b/multipleLayers.html
@@ -26,11 +26,16 @@
 		basemap tiles -->
 		<button id="loadData" name="loadData" onclick="loadEarthquakeData()">Click here to load the
 		data </button>
+		<button id="removeEarthquakeData" name="removeEarthquakeData"
+		onclick="removeEarthquakeData()">Click here to remove the Earthquake data </button>
 		<script>
 		function loadEarthquakeData() {
 		alert("load the data here");
 		}
 		function loadEarthquakeData() {
+		function removeEarthquakeData() {
+		alert("remove the earthquake data here");
+		}
 		// call the getEarthquakes code
 		// keep the alert message so that we know something is happening
 		alert("Loading Earthquakes");
