--- a/additionalLayers.html
+++ b/additionalLayers.html
@@ -24,9 +24,16 @@
 		<div id="mapid" style="width: 600px; height: 400px;"></div>
 		<!-- the following script will load the map and set the default view and zoom, as well as loading the
 		basemap tiles -->
+		<button id="addabusstops" name="addabusstops" onclick="addabusstopsData()">Click here to add the
+		bussops data </button>
+		<button id="removeabusstops" name="removeabusstops"
+		onclick="removeabusstopsData()">Click here to remove the Earthquake data </button>
+		<script>
+		<!-- the following script will load the map and set the default view and zoom, as well as loading the
+		basemap tiles -->
 		<script>
 		// load the map
-		var mymap = L.map('mapid').setView([51.505, -0.09], 13);
+		var mymap
 		// load the tiles	
 		
 		L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
@@ -50,7 +57,7 @@
 		url = "https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_hour.geojson"
 		}
 		if (layername == "busstops") {
-		url = "https://developer.cege.ucl.ac.uk:31060/week2/busstops.geojson"
+		url = "https://developer.cege.ucl.ac.uk:31071/week2/busstops.geojson"
 		}
 		client.open('GET',url);
 		client.onreadystatechange = dataResponse;
