--- a/additionalLayers.html
+++ b/additionalLayers.html
@@ -12,39 +12,32 @@
 	<link rel="stylesheet" href="ionicons.min.css">
 	<link rel="stylesheet" href="leaflet.awesome-markers.css">
 	<script src="leaflet.awesome-markers.js"></script>	
-	
-	<!-- the following CSS is used to set the size of the Map -->
-	<style type="text/css">
-		#mapid { height: 180px; }
-	</style>
-	
-</head>
-	<body>
-		<!-- the mapid div will hold the map -->
-		<div id="mapid" style="width: 600px; height: 400px;"></div>
-		<!-- the following script will load the map and set the default view and zoom, as well as loading the
-		basemap tiles -->
-		<button id="addbusstops" name="addbusstops" onclick="addbusstopsData()">Click here to add the
-		busstoplayer data </button>
-		<button id="removebusstops" name="removebusstops"
-		onclick="removebusstopsData()">Click here to remove the busstoplayer data </button>
-		<!-- the following script will load the map and set the default view and zoom, as well as loading the
-		basemap tiles -->
-		<script>
-		// load the map
-		var mymap = L.map('mapid').setView([51.505, -0.09], 13);
-		// load the tiles	
-		
-		L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
-			maxZoom: 18,
-			attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors,' +
-				'<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>,' +
-				'Imagery © <a href="http://mapbox.com">Mapbox</a>',
-			id: 'mapbox.streets'
-		}).addTo(mymap);
-		// create a variable for each of the layers we want to load/remove
+	<script>
+	// create a variable for each of the layers we want to load/remove
 		var earthquakelayer;
 		var busstoplayer;
+		
+		function loadEarthquakeData() {
+		// call the getEarthquakes code
+		// keep the alert message so that we know something is happening
+		alert("Loading Earthquakes");
+		getData("earthquakes");
+		}
+		function loadBusstopsData() {
+		// call the getEarthquakes code
+		// keep the alert message so that we know something is happening
+		alert("Loading Bus stops");
+		getData("busstops");
+		}
+		
+		function removeEarthquakeData() {
+		alert("Earthquake data will be removed");
+		mymap.removeLayer( earthquakelayer );
+		}
+		function removeBusstopsData() {
+		alert("Bus stops data will be removed");
+		mymap.removeLayer( busstoplayer );
+		}
 		// create a variable that will hold the XMLHttpRequest() - this must be done outside a function so that all the functions can use the same variable
 		var client;
 		// create the code to get the data using an XMLHttpRequest
@@ -92,6 +85,39 @@
 					mymap.fitBounds(busstoplayer.getBounds());
 			}
 		}
+		</script>
+	<!-- the following CSS is used to set the size of the Map -->
+	<style type="text/css">
+		#mapid { height: 180px; }
+	</style>
+	
+</head>
+	<body>
+		<!-- the mapid div will hold the map -->
+		<div id="mapid" style="width: 600px; height: 400px;"></div>
+		<button id="loadData" name="loadEarthquakeData" onclick="loadEarthquakeData()">Click here to load the
+		Earthquake data </button>
+		<button id="removeEarthquakeData" name="removeEarthquakeData"
+		onclick="removeEarthquakeData()">Click here to remove the Earthquake data </button>
+		<!-- the following script will load the map and set the default view and zoom, as well as loading the
+		basemap tiles -->
+		<button id="loadData" name="loadBusstopsData" onclick="loadBusstopsData()">Click here to load the Bus stops
+		data </button>
+		<button id="removeBusstopsData" name="removeBusstopsData"
+		onclick="removeBusstopsData()">Click here to remove the bus stops data </button>
+		<script>
+		// load the map
+		var mymap = L.map('mapid').setView([51.505, -0.09], 13);
+		// load the tiles	
+		
+		L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
+			maxZoom: 18,
+			attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors,' +
+				'<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>,' +
+				'Imagery © <a href="http://mapbox.com">Mapbox</a>',
+			id: 'mapbox.streets'
+		}).addTo(mymap);
+		
 		</script>
 		</body>
 </html>
